Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-02-11 (SVN):
    * screen.c, gl_screen.c: Tweaked SCR_DrawLoading to draw the loading
      plaque only when necessary, i.e. once only after SCR_UpdateScreen
      is called. Changed scr_drawloading from a boolean to int, so that
      it can be used to store the need for drawing the loading plaque as
      well as the truth value of loading screen being in effect by using
      bit flags. Skip the Draw_Fill() calls when there is no progress to
      draw, i.e. when count is 0.

2012-02-11 (SVN):
    * in_sdl.c: Fixed Mac OS X console and message mode backspace key
      (bug #2688151)

2012-02-10 (SVN):
    * Updated the features document after the recent fov enhancements.

2012-02-10 (SVN):
    * hexen2, cl_main.c (CL_EstablishConnection): Send a clc_nop to the
      server after establishing connection. Fixes the connection getting
      stuck sometimes after displaying the "Connection accepted" message.

2012-02-07 (SVN):
    * launcher: Set absence as well as availability in scan_h2_mods() and
      scan_hw_mods().

2012-02-06 (SVN):
    * launcher: Added support for gtk-3.x: Removed the GtkCombo code and
      made menus to use GtkOptionMenu for gtk-1.x/2.x and GtkComboBoxText
      for gtk-3.x. Added multiple macros to eliminate ifdefs in the menu
      code. Some further cleanup might be possible, but the code seems to
      work just fine.

2012-02-06 (SVN):
    * launcher: Added compatibility macro GTK_SIGHANDLER_T, defined as
      guint for gtk1 and as gulong for newer gtk versions.

2012-02-06 (SVN):
    * launcher: Rename WGT_RESCOMBO and WGT_CONWCOMBO to WGT_RESMENU and
      WGT_CONWMENU, which are actually menus after all.
    * launcher: Remove hwgames_t structure whose only difference from
      h2games_t was the absence of the is_botmatch field.

2012-02-06 (SVN):
    * launcher: Fixed game selection callback functions assigning a bad